# fouroversix

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml  publish.yml
scripts/: create_test_case.py  generate_kernels.py  resources.py  test_on_modal.py
scripts/ptq/: __main__.py  awq.py  evaluator.py  gptq.py  high_precision.py  rtn.py  smoothquant.py  spinquant.py  utils.py  worker.py
scripts/train/: __main__.py
src/fouroversix/: __init__.py  backend.py  fp4_tensor.py  frontend.py  ops.py  ptq.py  utils.py
src/fouroversix/csrc/: bindings.cpp  fp4_gemm_sm120.cu
src/fouroversix/csrc/include/: fp4_quant.h  fp4_quant_kernel.h  kernel_traits.h  utils.h
src/fouroversix/csrc/quantize/: fp4_quant.cu  fp4_quant_bf16_mxfp4_rht_sm100.cu  fp4_quant_bf16_mxfp4_rht_trans_sm100.cu  fp4_quant_bf16_mxfp4_sm100.cu  fp4_quant_bf16_mxfp4_trans_sm100.cu  fp4_quant_bf16_nvfp4_rht_sm100.cu  fp4_quant_bf16_nvfp4_rht_trans_sm100.cu  fp4_quant_bf16_nvfp4_sm100.cu  fp4_quant_bf16_nvfp4_trans_sm100.cu  fp4_quant_fp16_mxfp4_rht_sm100.cu  fp4_quant_fp16_mxfp4_rht_trans_sm100.cu  fp4_quant_fp16_mxfp4_sm100.cu  fp4_quant_fp16_mxfp4_trans_sm100.cu  fp4_quant_fp16_nvfp4_rht_sm100.cu  fp4_quant_fp16_nvfp4_rht_trans_sm100.cu  fp4_quant_fp16_nvfp4_sm100.cu  fp4_quant_fp16_nvfp4_trans_sm100.cu
src/fouroversix/model/: __init__.py  fp4_linear.py  quantize.py
src/fouroversix/quantize/: fp4_tensor.py  reference.py  triton_kernel.py
tests/: test_correctness.py
